[package]
name = "redis_pool"
version = "0.6.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>",  "Wil Gaboury"]
description = "Library to Provide a redis client and cluster client pools."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["Redis", "Pool", "tokio"]
repository = "https://github.com/AscendingCreations/RedisPool"

[features]
cluster = ["redis/cluster-async"]

[dependencies]
tokio = { version = "1.43.0", features = ["sync"] }
async-trait = "0.1.85"
tracing = "0.1.41"
thiserror = "2.0.11"
redis = { version = "0.28.0", features = ["aio", "tokio-comp"]}
crossbeam-queue = "0.3.12"

[dev-dependencies]
tokio = { version = "1.39.0", features = ["rt-multi-thread", "macros", "process"] }
testcontainers = "0.14.0"
anyhow = "1.0"
futures = "0.3.30"
redis_pool = { path = ".", features = ["cluster"]}
serial_test = "0.4"
axum = "0.7"
