[package]
name = "redis_pool"
version = "0.8.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>",  "Wil Gaboury"]
description = "Library to Provide a redis client and cluster client pools."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["Redis", "Pool", "tokio"]
repository = "https://github.com/AscendingCreations/RedisPool"

[features]
cluster = ["redis/cluster-async"]

[dependencies]
tokio = { version = "1.47.1", features = ["sync"] }
async-trait = "0.1.89"
tracing = "0.1.41"
thiserror = "2.0.16"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"]}
crossbeam-queue = "0.3.12"
parking_lot = "0.12.4"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "process"] }
testcontainers = "0.14.0"
anyhow = "1.0"
futures = "0.3.31"
redis_pool = { path = ".", features = ["cluster"]}
serial_test = "3.2.0"